updated greetings, aboutme, tools, skills

--- a/src/containers/iAmGoodAt/IAmGoodAt.css
+++ b/src/containers/iAmGoodAt/IAmGoodAt.css
@@ -2,17 +2,16 @@
   width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  /* margin-top: 4rem; */
+  margin-top: 4rem;
 }
-.greet-main {
-  /* width: 90%; */
-  padding: 100px 30px;
-  /* margin: 0px auto; */
-  /* margin-top: 2rem; */
-  background: #EFE5E5;
+.iAmGoodAt-main {
+  width: 90%;
+  padding: 10px;
+  margin: 0px auto;
+  margin-top: 2rem;
 }
 
-.greeting-main {
+.iAmGoodAt-main {
   display: flex;
 }
 
@@ -22,37 +21,42 @@
   font-weight: bold;
 }
 
-.greeting-main {
+.iAmGoodAt-main {
   display: flex;
 }
 
-.greeting-main > * {
+.iAmGoodAt-main > * {
   flex: 1;
   margin-bottom: 30px;
 }
-.button-greeting-div {
+.button-iAmGoodAt-div {
   display: flex;
   margin-top: 20px;
 }
 
-.greeting-text {
+.iAmGoodAt-text {
   font-size: 20px;
   line-height: 1.1;
   color: black !important;
 }
 
-.title-text {
-  font-size: 70px;
+.iAmGoodAt-title-text {
+  /* font-size: 70px; */
   line-height: 1.1;
   color: black !important;
 }
 
-.greeting-text-p {
+.iAmGoodAt-text-p {
   font-size: 20px;
-  line-height: 30px;
+  /* line-height: 30px; */
+
+  margin: 20px 10px 30px 20px;
+  color: black !important;
+  font-family: 'Abhaya Libre';
+    line-height: 5px;
 }
 
-.greeting-image-div > img {
+.iAmGoodAt-image-div > img {
   max-width: 100%;
   height: auto;
 }
@@ -92,38 +96,38 @@
 
 /* Media Query */
 @media (max-width: 1380px) {
-  .greeting-text {
+  .iAmGoodAt-text {
     font-size: 30px;
   }
-  .title-text {
-    font-size: 80px;
+  .iAmGoodAt-title-text {
+    /* font-size: 80px; */
   }
-  .greeting-text-p {
+  .iAmGoodAt-text-p {
     font-size: 20px;
   }
 }
 @media (max-width: 768px) {
-  .button-greeting-div {
+  .button-iAmGoodAt-div {
     justify-content: space-around;
   }
-  .greeting-text {
+  .iAmGoodAt-text {
     font-size: 15px;
     text-align: center;
   }
 
-  .title-text {
-    font-size: 50px;
+  .iAmGoodAt-title-text {
+    /* font-size: 50px; */
   }
 
-  .greeting-text-p {
+  .iAmGoodAt-text-p {
     font-size: 16px;
     line-height: normal;
     text-align: center;
   }
-  .greeting-main {
+  .iAmGoodAt-main {
     display: block;
   }
-  .greeting-image-div {
+  .iAmGoodAt-image-div {
     height: 256px;
   }
 }
