--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,6 +1,6 @@
 .main-button {
-  background-color: #55198b;
-  border: solid 1px #55198b;
+  background-color: #333;
+  border: solid 1px #333;
   color: white;
   font-weight: 700;
   width: max-content;
@@ -18,7 +18,7 @@
 }
 .main-button:hover {
   background-color: #ffffff;
-  color: #55198b;
+  color: #333;
   transition: all 0.3s ease 0s;
   transform: translateY(-3px);
 }
