--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,10 @@
 
 .header {
-  background-color: #fff;
+  background-color: #EFE5E5;
   max-width: 100%;
   padding: 15px 20px;
   margin: 0px auto;
+  background: #EFE5E5;
 }
 
 .header ul {
@@ -25,7 +26,7 @@
 
 .header li a:hover,
 .header .menu-btn:hover {
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
 }
 
 .header .logo {
@@ -38,10 +39,11 @@
   line-height: normal;
 }
 .header .logo-name {
-  font-family: "Agustina Regular";
-  font-weight: bold;
-  font-variant-ligatures: no-common-ligatures;
-  -webkit-font-variant-ligatures: no-common-ligatures;
+  font-family: "Abhaya Libre";
+  color: #333;
+  /* font-weight: bold; */
+  /* font-variant-ligatures: no-common-ligatures; */
+  /* -webkit-font-variant-ligatures: no-common-ligatures; */
   padding: 0 10px;
 }
 
@@ -130,6 +132,22 @@
   top: 0;
 }
 
+.header .menu .roboto-text {
+  font-family: 'Roboto';
+}
+
+.target {
+  position: absolute;
+  border-bottom: 4px solid transparent;
+  z-index: 1;
+  transform: translateX(-60px);
+}
+
+.header a,
+.target {
+  transition: all .35s ease-in-out;
+}
+
 /* 48em = 768px */
 
 @media (min-width: 48em) {
@@ -147,9 +165,20 @@
   .header .menu-icon {
     display: none;
   }
+  
 }
 @media (max-width: 960px) and (min-width: 768px) {
   .header {
     font-size: 12px;
   }
+  
+}
+
+@media (max-width: 500px) and (min-width: 320px) {
+  .header {
+    font-size: 12px;
+  }
+  .target {
+    display: none;
+  } 
 }
