--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -2,15 +2,22 @@
     text-align: left;
     margin: 1rem .5rem 0rem .5rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .01), 0 6px 20px 0 rgba(0, 0, 0, .1);
-    padding: .5rem 1rem 0rem 1rem;
-    width: 480px;
+    padding: 2rem 1rem 0rem 1rem;
+    width: 620px;
     border-radius: 10px;
+    cursor: pointer;
 }
-/* 
-.card-project :hover {
+
+/* div.card-project.shadow :hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .1);
 
 } */
+
+.work-link {
+text-decoration: none;
+color: #333;
+}
+
 .title-project {
     text-align: left;
 }
@@ -29,12 +36,13 @@
 }
 
 .thumbnail-project {
-    width: 95%;
+    width: 98%;
     /* height: 18rem; */
     /* box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3); */
     /* border-radius: 5px; */
     display: inline-block;
     margin: 1rem .5rem 0rem .5rem;
+    vertical-align: bottom;
 }
 .info-project {
     display: inline-block;
