work routing updated

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,7 +39,7 @@
   line-height: normal;
 }
 .header .logo-name {
-  font-family: "Abhaya Libre";
+  /* font-family: "Abhaya Libre"; */
   color: #333;
   /* font-weight: bold; */
   /* font-variant-ligatures: no-common-ligatures; */
