--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -22,6 +22,27 @@
   transition: all 0.3s ease 0s;
   transform: translateY(-3px);
 }
+.main-trns-button {
+  color: #333;
+  font-weight: 700;
+  width: max-content;
+  /* padding: 13px 22px; */
+  margin-right: 50px;
+  text-transform: uppercase;
+  border-radius: 6px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  /* margin-top: 20px; */
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out 0s;
+}
+.main-trns-button:hover {
+  color: #333;
+  transition: all 0.3s ease 0s;
+  transform: translateY(-3px);
+}
 .project-button {
   display: flex;
   justify-content: center;
