--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -6,14 +6,19 @@
 }
 .greet-main {
   /* width: 90%; */
-  padding: 100px 30px;
+  padding: 100px 30px 0px 30px;
   /* margin: 0px auto; */
   /* margin-top: 2rem; */
   background: #fff;
+  
+}
+.greeting-text-p.subTitle {
+font-weight: 100;
 }
 
 .greeting-main {
   display: flex;
+  height: 75vh;
 }
 
 .subTitle {
@@ -30,6 +35,12 @@
   flex: 1;
   margin-bottom: 30px;
 }
+.greet-main .greeting-main .greeting-text-div {
+  margin-bottom: 200px;
+}
+.greet-main .greeting-main .greeting-image-div {
+  margin-bottom: 0px;
+}
 .button-greeting-div {
   display: flex;
   margin-top: 20px;
@@ -39,12 +50,14 @@
   font-size: 20px;
   line-height: 1.1;
   color: black !important;
+  margin-bottom: 40px;
 }
 
 .title-text {
   font-size: 70px;
   line-height: 1.1;
   color: black !important;
+  font-weight: bold;
 }
 
 .greeting-text-p {
@@ -52,9 +65,22 @@
   line-height: 30px;
 }
 
+.greeting-image-div {
+  max-width: 30%;
+  display: flex;
+    align-items: flex-end;
+}
+
+.greeting-text-div {
+  display: flex;
+    align-items: flex-end;
+}
+
+
 .greeting-image-div > img {
   max-width: 100%;
   height: auto;
+  height: 35rem;
 }
 
 .wave-emoji {
