--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,8 +1,8 @@
 
 .header {
-  background-color: #EFE5E5;
+  /* background-color: #EFE5E5; */
   max-width: 100%;
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
   margin: 0px auto;
   background: #fff;
 }
@@ -48,8 +48,10 @@
 }
 
 header .logo-name img {
-  width: 50px;
+  width: 80px;
+  padding-left: 25px;
 }
+
 /* menu */
 
 .header .menu {
@@ -136,7 +138,7 @@ header .logo-name img {
 }
 
 .header .menu .roboto-text {
-  font-family: 'Roboto';
+  font-family: 'Montserrat', sans-serif;
 }
 
 .target {
@@ -164,6 +166,7 @@ header .logo-name img {
   }
   .header .menu {
     max-height: none;
+    
   }
   .header .menu-icon {
     display: none;
