--- a/src/components/projectTitle/ProjectTitle.css
+++ b/src/components/projectTitle/ProjectTitle.css
@@ -18,6 +18,7 @@
   left: 0;
   font-size: 3rem;
   padding: 10px;
+  line-height: 1;
 }
 
 .projectTitle-text-inner-div {
@@ -71,7 +72,7 @@
 
 .projectTitle-text-inner-div-title-span {
   margin: 10px 10px 0px 10px;
-  color: #f05f32;
+  color: rgb(219, 164, 107);
   font-size: larger;
   font-weight: bold;
   position: absolute;
