--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,6 +39,7 @@
   text-decoration: none;
   margin-top: 10px;
   line-height: normal;
+  margin-left: 40px;
 }
 .header .logo-name {
   /* font-family: "Abhaya Libre"; */
