--- a/src/containers/aboutMe/AboutMe.css
+++ b/src/containers/aboutMe/AboutMe.css
@@ -8,7 +8,7 @@
   width: 90%;
   padding: 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .aboutMe-main {
@@ -42,18 +42,17 @@
 
 .aboutMe-title-text {
   /* font-size: 70px; */
-  line-height: 1.1;
+  /* line-height: 1.1; */
   color: black !important;
 }
 
 .aboutMe-text-p {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 16px;
+  line-height: 1.8rem;
 
   margin: 20px 10px 30px 0px;
   color: black !important;
-  /* font-family: 'Abhaya Libre'; */
-  line-height: 2rem;
+
 }
 
 .aboutMe-image-div > img {
@@ -74,7 +73,7 @@
   border: 2px solid #dba46b;
   background-color: white;
   color: black;
-  padding: 14px 28px;
+  padding: 12px 20px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 5px;
