--- a/src/containers/iAmGoodAt/IAmGoodAt.css
+++ b/src/containers/iAmGoodAt/IAmGoodAt.css
@@ -6,9 +6,8 @@
 }
 .iAmGoodAt-main {
   width: 90%;
-  padding: 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .iAmGoodAt-main {
@@ -65,8 +64,8 @@
   margin-bottom: 50px;
 }
 .iAmGoodAt-text-p {
-  font-size: 20px;
-  /* line-height: 30px; */
+  font-size: 16px;
+  line-height: 1rem;
 
   margin: 10px;
   color: black !important;
